2008-01-21  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/atom.h, src/atom.cpp: Handle SetType(string)
	as const as well.

	* src/obconversion.cpp: When looking for .gz extensions, make sure
	substrings go to the end of the string. This prevents problems on
	extensions like ".gzmat."

2008-01-21  Jean Brefort  <jean.brefort@normalesup.org>

	* src/math/spacegroup.cpp: fixed all g++ warnings.

2008-01-20  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/openbabel-perl,ruby,java.i: Merged in changes to
	openbabel-python.i.

2008-01-20  Jean Brefort  <jean.brefort@normalesup.org>

	* include/openbabel/atom.h: replace char* by const char* where
	appropriate to get rid of the deprecated conversion from
	const char* to char* gcc message.
	* include/openbabel/chains.h: ditto.
	* include/openbabel/data.h: ditto.
	* include/openbabel/pointgroup.h: ditto.
	* src/atom.cpp: ditto.
	* src/chains.cpp: ditto.
	* src/data.cpp: ditto.
	* src/formats/PQSformat.cpp: ditto.
	* src/formats/chem3dformat.cpp: ditto.
	* src/formats/chemdrawcdx.cpp: ditto.
	* src/formats/crkformat.cpp: ditto.
	* src/formats/fastaformat.cpp: ditto.
	* src/formats/gromos96format.cpp: ditto.
	* src/formats/pdbformat.cpp: ditto. (don't let this format to
	modify etab).
	* src/formats/yasaraformat.cpp: ditto.
	* src/mol.cpp: ditto.
	* src/parsmart.cpp: ditto.
	* src/pointgroup.cpp: ditto.
	* src/tokenst.cpp: ditto.
	* test/roundtrip.cpp: ditto.

2008-01-20  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/cifformat.cpp: don't try to find the group when there
	is no symmetry related data in the data block.
	* src/generic.cpp: fixed a typo (bug).
	* src/math/spacegroup.cpp: return after throwing an error.

2008-01-19 Chris Morley

	* scripts/openbabel-python.i: include op.h
	* windows-vc2005/OBPython/openbabel.py: updated

	* windows-vc2005/Distribution/NSISScriptToCreateInstallerOBF.nsi:
	add installer script for  obf (multi DLL) build
	
	* windows-vc2005/OBPython/_openbabel.pyd,